tests/transpiler/x/swift/json_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/034/main.swift:4:1: error: cannot find 'json' in scope
2 | import Foundation
3 | let m = ["a": 1, "b": 2]
4 | json(m)
  | `- error: cannot find 'json' in scope
5 | 
