tests/transpiler/x/swift/json_builtin.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:52:40 GMT+7
import Foundation
let m = ["a": 1, "b": 2]
json(m)
